--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,9 +1,10 @@
-name: Build and Test
+name: .NET Core Desktop
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build-and-test:
@@ -19,7 +20,7 @@ jobs:
           dotnet-version: 6.0.100  # You can specify the .NET Core version you need
 
       - name: Build main application
-        run: dotnet build ../Books/Books.csproj --configuration Release
+        run: dotnet build books/Books/Books.csproj --configuration Release
 
       - name: Test unit testing project
-        run: dotnet test ../BooksUnitTesting/UnitTesting.csproj --configuration Release
+        run: dotnet test books/BooksUnitTesting/UnitTesting.csproj --configuration Releas
