--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -20,7 +20,7 @@ jobs:
           dotnet-version: 6.0.100  # You can specify the .NET Core version you need
 
       - name: Build main application
-        run: dotnet build books/Books/Books.csproj --configuration Release
+        run: dotnet build Books/Books.csproj --configuration Release
 
       - name: Test unit testing project
-        run: dotnet test books/BooksUnitTesting/UnitTesting.csproj --configuration Releas
+        run: dotnet test BooksUnitTesting/UnitTesting.csproj --configuration Releas
