--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: 6.0.100  # You can specify the .NET Core version you need
 
       - name: Restore dependencies
-        run: dotnet restore books/Books/Books.csproj
+        run: dotnet restore Books/Books.csproj
 
       - name: Build main application
-        run: dotnet build books/Books/Books.csproj --configuration Release
+        run: dotnet build Books/Books.csproj --configuration Release
 
       - name: Test unit testing project
-        run: dotnet test books/BooksUnitTesting/UnitTesting.csproj --configuration Release
+        run: dotnet test BooksUnitTesting/UnitTesting.csproj --configuration Release
